# multi-agent-code-factory

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: autonomy_policy.yaml
docs/: README.md  operations.md
docs/design/: 00-master-overview.md  redis-mysql-consistency-final.html
docs/factory/runs/: .gitkeep
docs/runs/: .gitkeep
domains/: README.md
domains/arb/: README.md
multi_agent_code_factory/: __init__.py  __main__.py  _paths.py  agent_roles.py  artifact_loader.py  batch_closure.py  checkpoint.py  config.py  context.py  context_lines.py  dependency_extract.py  dev_task_scheduler.py  env.py  graph.py  graph_routing.py  llm.py  log.py  pipeline_nodes.py  profiles.py  prompt_context.py  prompt_context_trim.py  retry_context.py  run_artifact_names.py  run_summary.py  state.py  task_batch_context.py
multi_agent_code_factory/agents/: __init__.py  architect.py  artifact_normalizers.py  base.py  developer.py  developer_output.py  live.py  live_helpers.py  llm_runner.py  llm_schemas.py  llm_usage.py  pm.py  qa.py  reviewer.py
multi_agent_code_factory/graph/: __init__.py  graph_builder.py  nodes.py  pipeline_run_context.py  runner.py
multi_agent_code_factory/llm/: __init__.py  _env.py  config.py  factory.py  health.py  providers.py  types.py
multi_agent_code_factory/nodes/: __init__.py  deploy.py  deploy_hitl.py  design_hitl.py  design_validate.py  escalation_hitl.py  fail.py  prd_hitl.py  prd_validate.py  spec_hitl.py  spec_validate.py
multi_agent_code_factory/observability/: __init__.py  langsmith.py
multi_agent_code_factory/profile_config/: __init__.py  loader.py  models.py
multi_agent_code_factory/profiles/: README.md  arb.yaml  default.yaml  go-cli.yaml  go.yaml  java-gradle.yaml  java-maven.yaml  java.yaml  python.yaml  rust-cli.yaml  rust.yaml  solidity-foundry.yaml  solidity-hardhat.yaml  solidity.yaml
multi_agent_code_factory/renderers/: __init__.py  design_md.py  prd_md.py  review_md.py  spec_md.py
multi_agent_code_factory/runtime/: stub_mode.py
scripts/: _apply_prd_r6.py  _fix_prd_doc_links.py  _fix_prd_fields.py  _fix_prd_mismatch.py  check_doc_links.py  debug_pm_prd_llm.py  debug_pm_spec_llm.py  vm-run-calculator.sh  vm-run-pipeline.sh
tests/: conftest.py  test_ac_traceability.py  test_artifact_normalizers.py  test_cargo_json_parser.py  test_cli.py  test_config.py  test_continue_cli.py  test_continue_infer.py  test_continue_loader.py  test_continue_pipeline.py  test_coverage_parsers.py  test_design_delivery_rules.py  test_design_execution_plan_rules.py  test_design_md_renderer.py  test_design_semantic_rules.py  test_design_triggers.py  test_env.py  test_forge_json_parser.py  test_git_diff.py  test_graph.py  test_graph_loops.py  test_graph_routing.py  test_jacoco_forge_coverage_parsers.py  test_junit_xml_parser.py  test_live_helpers.py  test_llm.py  test_llm_runner.py  test_llm_usage.py  test_log.py  test_md_mermaid_validators.py  test_observability.py  test_prd_md_renderer.py  test_prd_rules_extended.py  test_prd_semantic_rules.py  test_profiles.py  test_prompt_context_qa_obs.py  test_prompt_context_trim.py  test_qa_diagnostics.py  test_retry_context.py  test_review_md_renderer.py  (+15 more)
(+284 files in other folders)
